--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     <div class="buttons" id="buttons">
-        <button id="delete-button">Delete Task</button>
-        <button href="#" id="save-button">Download TaskList</button>
+        <button id="delete-button" class="button">Delete Task</button>
+        <button href="#" id="save-button" class="button">Download TaskList</button>
+        <button id="help-button" class="button">Guide</button>
+        <button id="clear-button" class="button">Clear Tasks</button>
     </div>
     <div class="task-input">
         <input type="text" placeholder="Enter task here:" id="input-entry">
-        <button type="submit" id="submit-button">Add Task</button>
+        <button type="submit" id="submit-button" class="task-button">Add Task</button>
     </div>
     <div id="task-list"></div>
 </body>
